# stoolap

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  codecov.yml  docker-compose.tikv.yml  tsan_suppressions.txt
.cargo/: mutants.toml
.github/workflows/: ci.yml  jekyll-gh-pages.yml  nightly.yml  tikv.yml
benches/: delete_by_id.rs  delete_complex.rs  select_by_id.rs  select_complex.rs  tikv_comparison.rs  update_by_id.rs  update_complex.rs
docs/: .gitignore  404.html  CNAME  Gemfile  README.md  _config.yml  changelog.html  index.html  playground.html  search.json
docs/_data/: doc_categories.yml
docs/_docs/: index.md
docs/_docs/architecture/: architecture.md  expression-pushdown.md  hybrid-storage.md  indexing.md  mvcc-implementation.md  persistence.md  storage-engine.md  transaction-isolation.md  unique-indexes.md
docs/_docs/data-types/: data-types.md  date-and-time.md  json-support.md  semantic-search.md  vector-search.md
docs/_docs/development/: building.md  contributing.md  known-limitations.md  migration-v037-to-v040.md  testing.md
docs/_docs/drivers/: c.md  csharp.md  go-wasm.md  go.md  java.md  mcp.md  nodejs.md  php.md  python.md  ruby.md  swift.md  wasm.md
docs/_docs/functions/: aggregate-functions.md  scalar-functions.md  sql-functions-reference.md  table-valued-functions.md  window-functions.md
docs/_docs/getting-started/: api-reference.md  connection-strings.md  installation.md  quickstart.md  stoolap-studio.md  subqueries-quickstart.md
docs/_docs/performance/: ann-benchmarks.md  optimization.md  parallel-execution.md  query-execution.md  query-optimizer.md  semantic-cache.md  vectorized-execution.md
docs/_docs/sql-commands/: describe.md  pragma-commands.md  schema-management.md  show-commands.md  sql-commands.md
docs/_docs/sql-features/: alter-table.md  auto-increment.md  cast-operations.md  collation.md  common-table-expressions.md  distinct-operations.md  explain.md  foreign-keys.md  join-operations.md  null-handling.md  on-duplicate-key-update.md  operators-expressions.md  parameter-binding.md  returning.md  rollup-cube.md  savepoints.md  set-operations.md  subqueries.md  temporal-queries.md  transactions.md  views.md  window-functions.md
docs/_includes/: driver-icons.html
docs/_layouts/: default.html  doc.html  post.html
docs/_posts/: 2026-02-19-introducing-stoolap-node.md  2026-02-27-vector-and-semantic-search-in-sql.md  2026-03-13-migrating-a-single-node-trading-app-from-postgresql-to-stoolap.md  2026-04-08-calling-a-rust-library-from-go-with-cgo-disabled.md
docs/assets/css/: code-interactions.css  code.css  dark-mode-fix.css  doc-navigation-fix.css  encode-sans-tweaks.css  enhanced-code-highlighting.css  hamburger-only.css  home-additions.css  home.css  logo-dark-fix.css  main.css  mobile-menu-fix.css  playground.css  rubik-font.css  stoolap-font.css  style.scss  syntax-highlighting.css  typography-enhancement.css
docs/assets/js/: code-highlighting.js  main.js  mobile-menu.js  playground.js  theme.js
docs/assets/wasm/: .gitignore  package.json  stoolap.d.ts  stoolap.js  stoolap_bg.wasm.d.ts
docs/blog/: index.html
docs/docs/: index.html
examples/: ann_benchmark.rs  benchmark.rs  benchmark_duckdb.rs  benchmark_ffi.c  benchmark_sqlite.rs  comparison.rs.disabled  product_search.rs  semantic_search.rs  vector_search_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_expressions.rs  fuzz_query_execute.rs  fuzz_sql_parser.rs  fuzz_structured_sql.rs  fuzz_transactions.rs
include/: stoolap.h
src/: lib.rs  test_failpoints.rs  wasm.rs
src/api/: database.rs  mod.rs  params.rs  read_only_database.rs  reader_attachment.rs  rows.rs  statement.rs  transaction.rs
src/common/: buffer_pool.rs  compact_arc.rs  compact_vec.rs  cow_btree.rs  cow_hashmap.rs  i64_map.rs  int64_map.rs  int_maps.rs  maps.rs  mod.rs  smart_string.rs  time_compat.rs  version.rs
src/core/: error.rs  mod.rs  row.rs  row_vec.rs  schema.rs  types.rs  value.rs  value_interner.rs
src/executor/: aggregation.rs  context.rs  copy.rs  cte.rs  ddl.rs  dml.rs  dml_fast_path.rs  evaluator.rs  explain.rs  expr_converter.rs  foreign_key.rs  hash_table.rs  index_optimizer.rs  join.rs  join_executor.rs  mod.rs  operator.rs  parallel.rs  pattern_cache.rs  pk_fast_path.rs  planner.rs  query.rs  query_cache.rs  query_classification.rs  result.rs  semantic_cache.rs  set_ops.rs  show.rs  statistics.rs  subquery.rs  utils.rs  window.rs
src/ffi/: database.rs  error.rs  mod.rs  read_only.rs  rows.rs  statement.rs  transaction.rs  types.rs  value.rs
src/functions/: mod.rs  registry.rs  tvf.rs
src/optimizer/: aqe.rs  bloom.rs  cost.rs  feedback.rs  join.rs  mod.rs  simplify.rs  workload.rs
src/parser/: ast.rs  error.rs  expressions.rs  lexer.rs  mod.rs  parser.rs  precedence.rs  statements.rs  token.rs
src/storage/: config.rs  mod.rs  statistics.rs
src/storage/index/: pk.rs  (+7 more)
tests/: adaptive_execution_test.rs  aggregate_functions_test.rs  aggregate_order_test.rs  aggregation_advanced_test.rs  aggregation_test.rs  arena_slot_reuse_test.rs  as_of_test.rs  auto_increment_test.rs  bitmap_index_sql_test.rs  bitwise_operators_test.rs  btree_index_sql_test.rs  bug_aggregate_in_subquery_test.rs  bug_alias_shadow_group_by_test.rs  bug_composite_unique_upsert_test.rs  bug_conflict_target_test.rs  bug_contains_orderby_params_test.rs  bug_current_txn_id_test.rs  bug_insert_select_upsert_dup_test.rs  bug_keyword_column_case_test.rs  bug_like_escape_test.rs  bug_like_param_test.rs  bug_max_no_where_test.rs  bug_now_stale_cache_test.rs  bug_timestamp_iso_millis_test.rs  bug_tx_partial_columns_test.rs  bug_unique_index_test.rs  bug_unique_lost_after_reopen_test.rs  bug_upsert_no_pk_test.rs  bug_view_column_alias_test.rs  bugs2_regression_test.rs  bugs3_regression_test.rs  bugs4_regression_test.rs  bugs5_regression_test.rs  bugs6_regression_test.rs  bugs7_regression_test.rs  bugs8_regression_test.rs  bugs9_regression_test.rs  bugs_regression_test.rs  cardinality_feedback_test.rs  case_expression_test.rs  (+156 more)
tests/testdata/: create_v037db.sql
(+137 files in other folders)
