[package]
name = "stoolap"
version = "0.3.2"
edition = "2021"
authors = ["Stoolap Contributors"]
description = "High-performance embedded SQL database with MVCC, time-travel queries, and full ACID compliance"
license = "Apache-2.0"
repository = "https://github.com/stoolap/stoolap"
homepage = "https://stoolap.io"
documentation = "https://stoolap.io/docs/"
readme = "README.md"
keywords = ["database", "sql", "embedded", "mvcc", "acid"]
categories = ["database", "database-implementations"]

[lib]
name = "stoolap"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stoolap"
path = "src/bin/stoolap.rs"
required-features = ["cli"]

# PG server will be enabled once implemented
# [[bin]]
# name = "stoolap-pgserver"
# path = "src/bin/pgserver.rs"
# required-features = ["pg-server"]

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"
dashmap = "6"
crossbeam = "0.8"
rayon = { version = "1.8", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI (optional)
clap = { version = "4.4", features = ["derive"], optional = true }
rustyline = { version = "17.0", optional = true }
comfy-table = { version = "7.2", optional = true }
dirs = { version = "6.0", optional = true }

# Checksums for data integrity
crc32fast = "1.4"

# Compression
lz4_flex = "0.12"

# Utilities
bytes = "1.5"
smallvec = "1.11"
ordered-float = "5.1"
indexmap = "2.1"
rustc-hash = "1.1"
memchr = "2.6"
regex = "1.10"
radsort = "0.1"  # Radix sort - O(n) for integer keys
rand = "0.9"  # Random number generation for RANDOM() function
ahash = "0.8"  # Fast hash for hash indexes (DOS-resistant)
hashbrown = "0.16"  # HashMap with raw_entry API for efficient group-by
roaring = "0.11"  # Compressed bitmap indexes (used by Lucene, Druid, Spark)
lru = "0.16"  # O(1) LRU cache for compiled expression programs

# Optional benchmark dependencies (for comparison benchmarks)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
duckdb = { version = "1.4.3", features = ["bundled"], optional = true }

# Optional allocators
mimalloc = { version = "0.1", default-features = false, optional = true }

# TiKV distributed backend (optional)
tikv-client = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

# Platform-specific file locking
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
web-time = "1.1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.9"
dhat = "0.3"

[features]
default = ["cli", "parallel"]
parallel = ["dep:rayon"]
wasm = []  # Excludes parallel + persistence; for wasm32 builds
cli = ["clap", "rustyline", "comfy-table", "dirs"]
dhat-heap = []
sqlite = ["dep:rusqlite"]
duckdb = ["dep:duckdb"]
mimalloc = ["dep:mimalloc"]
tikv = ["dep:tikv-client", "dep:tokio"]

[[example]]
name = "benchmark_sqlite"
required-features = ["sqlite"]

[[example]]
name = "benchmark_duckdb"
required-features = ["duckdb"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = true  # Enable debug symbols for profiling

[[bench]]
name = "select_by_id"
harness = false

[[bench]]
name = "update_by_id"
harness = false

[[bench]]
name = "delete_by_id"
harness = false

[[bench]]
name = "select_complex"
harness = false

[[bench]]
name = "update_complex"
harness = false

[[bench]]
name = "delete_complex"
harness = false

[[bench]]
name = "tikv_comparison"
harness = false
required-features = ["tikv"]

[profile.bench]
lto = true
codegen-units = 1

# CI test profile: faster compile, less disk usage
[profile.ci]
inherits = "release"
lto = "thin"          # Much faster than full LTO
codegen-units = 16    # Parallel codegen
debug = false         # No debug symbols needed for tests
