[package]
name = "stoolap"
version = "0.4.0"
edition = "2021"
# Minimum Supported Rust Version. Required by:
# - Trait upcasting (`Box<dyn WriteTable>` -> `Box<dyn ReadTable>` via the
#   `WriteTable: ReadTable` supertrait coercion in
#   `ReadTransaction::get_read_table`), stabilized in Rust 1.86 (March 2025).
# - Several stdlib APIs in query/hnsw/ffi/scalar/aggregate code that
#   stabilized in Rust 1.87.
rust-version = "1.87"
authors = ["Stoolap Contributors"]
description = "High-performance embedded SQL database with MVCC, time-travel queries, and full ACID compliance"
license = "Apache-2.0"
repository = "https://github.com/stoolap/stoolap"
homepage = "https://stoolap.io"
documentation = "https://stoolap.io/docs/"
readme = "README.md"
keywords = ["database", "sql", "embedded", "mvcc", "acid"]
categories = ["database", "database-implementations"]

[lib]
name = "stoolap"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stoolap"
path = "src/bin/stoolap.rs"
required-features = ["cli"]

# PG server will be enabled once implemented
# [[bin]]
# name = "stoolap-pgserver"
# path = "src/bin/pgserver.rs"
# required-features = ["pg-server"]

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Concurrency
parking_lot = { version = "0.12", features = ["arc_lock"] }
dashmap = "6"
crossbeam = "0.8"
rayon = { version = "1.8", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI (optional)
clap = { version = "4.4", features = ["derive"], optional = true }
rustyline = { version = "17.0", optional = true }
comfy-table = { version = "7.2", optional = true }
dirs = { version = "6.0", optional = true }

# Checksums and hashing
crc32fast = "1.4"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"

# Compression
lz4_flex = "0.13"

# Test support
tempfile = { version = "3.9", optional = true }

# Utilities
bytes = "1.5"
smallvec = "1.11"
ordered-float = "5.1"
indexmap = "2.1"
rustc-hash = "1.1"
memchr = "2.6"
regex = "1.10"
csv = "1.3"  # CSV parsing for COPY FROM
radsort = "0.1"  # Radix sort - O(n) for integer keys
rand = "0.9"  # Random number generation for RANDOM() function
ahash = "0.8"  # Fast hash for hash indexes (DOS-resistant)
hashbrown = "0.16"  # HashMap with raw_entry API for efficient group-by
roaring = "0.11"  # Compressed bitmap indexes (used by Lucene, Druid, Spark)
lru = "0.16"  # O(1) LRU cache for compiled expression programs

# Optional benchmark dependencies (for comparison benchmarks)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
duckdb = { version = "1.4.3", features = ["bundled"], optional = true }

# Optional ANN benchmark dependencies (download + decompress datasets)
ureq = { version = "2", optional = true }
flate2 = { version = "1", optional = true }

# Optional allocators
mimalloc = { version = "0.1", default-features = false, optional = true }

# Semantic embedding (optional — enables EMBED() SQL function)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["progressbar", "fancy-regex"], optional = true }
hf-hub = { version = "0.4", optional = true }

# Platform-specific file locking
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
web-time = "1.1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.9"
dhat = "0.3"
sqllogictest = "0.29"

[features]
default = ["cli", "parallel"]
parallel = ["dep:rayon"]
wasm = []  # Excludes parallel + persistence; for wasm32 builds
ffi = []   # C FFI layer - enables extern "C" functions for language bindings
cli = ["clap", "rustyline", "comfy-table", "dirs"]
dhat-heap = []
sqlite = ["dep:rusqlite"]
duckdb = ["dep:duckdb"]
mimalloc = ["dep:mimalloc"]
semantic = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]
ann-benchmark = ["dep:ureq", "dep:flate2"]
test-failpoints = []
stress-tests = []
test-filedb = ["dep:tempfile"]  # Routes memory:// databases to temp file-backed databases for testing volume storage

[[example]]
name = "benchmark_sqlite"
required-features = ["sqlite"]

[[example]]
name = "benchmark_duckdb"
required-features = ["duckdb"]

[[example]]
name = "semantic_search"
required-features = ["semantic"]

[[example]]
name = "ann_benchmark"
required-features = ["ann-benchmark"]

[profile.dev]
debug = "line-tables-only"       # Faster incremental builds, keeps file:line backtraces
split-debuginfo = "unpacked"     # Faster incremental linking on macOS

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = "line-tables-only"  # Backtraces with file:line, skip variable info

# Maximum optimization profile (for published binaries / benchmarks)
[profile.max]
inherits = "release"
lto = true            # Fat LTO for maximum runtime performance
debug = false

[[bench]]
name = "select_by_id"
harness = false

[[bench]]
name = "update_by_id"
harness = false

[[bench]]
name = "delete_by_id"
harness = false

[[bench]]
name = "select_complex"
harness = false

[[bench]]
name = "update_complex"
harness = false

[[bench]]
name = "delete_complex"
harness = false

[profile.bench]
lto = "thin"
codegen-units = 1

# CI test profile: faster compile, less disk usage
[profile.ci]
inherits = "release"
codegen-units = 16    # Parallel codegen
debug = false         # No debug symbols needed for tests

# Mutation testing profile: fast incremental builds
[profile.mutants]
inherits = "test"
debug = "none"
